--- a/packages.config
+++ b/packages.config
@@ -5,24 +5,26 @@
   <package id="AForge.Math" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
-  <package id="BlazorDataGrid" version="5.0.0" targetFramework="net472" />
-  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
-  <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="6.1.1" targetFramework="net472" />
   <package id="FontAwesome.Sharp.StrongName" version="5.15.3.3" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.15.0" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
-  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
-  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1484.0" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
-  <package id="Microsoft.Web.WebView2" version="1.0.1210.30" targetFramework="net472" />
-  <package id="MySql.Data" version="8.0.28" targetFramework="net472" />
-  <package id="MySqlConnector" version="2.1.10" targetFramework="net472" />
-  <package id="protobuf-net" version="2.4.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.21.7" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.2.16" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.16" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.7" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1537.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1343.22" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.30" targetFramework="net472" />
+  <package id="MySqlConnector" version="2.1.13" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
+  <package id="protobuf-net" version="3.1.22" targetFramework="net472" />
+  <package id="protobuf-net.Core" version="3.1.22" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net46" requireReinstallation="true" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
